# iflow2api

./: README.md  pyproject.toml
iflow2api/: app.py  edge.py  gui.py  keys_store.py  model_catalog.py  oauth.py  oauth_login.py  opencode.py  proxy.py  proxy_manager.py  resilience.py  routing.py  routing_refresher.py  server.py  settings.py  usage_tracker.py  web_ui.py
scripts/: iflow2api-web.ps1  install-claude-command.ps1  install-claude-iflow-command.ps1  patch-claude-code-proxy-model-mapping.ps1  start-claude-code-proxy-iflow.ps1
