[project]
name = "iflow2api"
version = "0.2.0"
description = "将 iFlow CLI 的 AI 服务暴露为 OpenAI 兼容 API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "flet>=0.25.0,<0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
iflow2api = "iflow2api.main:main"
iflow2api-gui = "iflow2api.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iflow2api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
